# pyqt5-ela-pro

./: .gitignore  .pylintrc  AGENTS.md  LICENSE  README.md  pyproject.toml  test_memory_compare.py  test_shared_app.py  test_shared_browser.py  界面测试.py
ela_ext/: __init__.py  animation.py  combo_box.py  ela_capsule_combo_box.py  ela_long_press_button.py  ela_primary_button.py  ela_side_drawer.py  flow_layout.py  office_viewer.py  parquet_table.py  splash_screen.py  svg_icon.py  table_view.py  taskbar_progress.py  widget_base.py
ela_ext/example/: __init__.py  __main__.py  animation_page.py  base_page.py  basic_page.py  button_page.py  chart_page.py  container_page.py  dialog_page.py  display_page.py  drawer_page.py  es_icon_delegate.py  es_icon_model.py  form_page.py  graphics_page.py  icon_delegate.py  icon_page.py  input_page.py  layout_page.py  menu_page.py  navigation_page.py  svg_icon_example.py  tooltip_page.py
example/: SplashScreen.py  beforemain.py  main.py  mainwindow.py
example/ExamplePage/: T_About.py  T_BaseComponents.py  T_BasePage.py  T_Card.py  T_Graphics.py  T_Home.py  T_Icon.py  T_ListView.py  T_LogWidget.py  T_Navigation.py  T_Popup.py  T_Setting.py  T_TableView.py  T_TreeView.py  T_UpdateWidget.py
example/ModelView/: T_ListViewModel.py  T_LogModel.py  T_TableViewModel.py  T_TreeItem.py
pyqt5_ela_pro/: __init__.py  _colors.py  _internal.py  _version.py  animation.py  browser_embedder.py  combo_box.py  dialog_base.py  ela_button.py  ela_capsule_line_edit.py  ela_capsule_multi_combo_box.py  ela_capsule_searchable_combo_box.py  ela_capsule_searchable_multi_combo_box.py  ela_chip.py  ela_confirm_dialog.py  ela_dashboard_gauge.py  ela_divider.py  ela_dropdown_button.py  ela_figure_canvas.py  ela_group_box.py  ela_info_badge.py  ela_long_press_button.py  ela_markdown_viewer.py  ela_pagination.py  ela_password_edit.py  ela_primary_button.py  ela_progress_button.py  ela_pyqtgraph_canvas.py  ela_rating_control.py  ela_side_drawer.py  ela_split_button.py  ela_spotlight.py  ela_steps.py  ela_tag_box.py  ela_tag_combo_base.py  ela_tag_line_edit.py  ela_tag_multi_box.py  ela_tag_search_box.py  ela_tag_search_multi_box.py  ela_timeline.py  (+17 more)
pyqt5_ela_pro/example/: __init__.py  __main__.py  advanced_page.py  animation_icon_page.py  application_page.py  base_page.py  basic_container_page.py  browser_example.py  browser_page.py  combo_box_page.py  drawer_tooltip_page.py  es_icon_delegate.py  form_button_page.py  graphics_page.py  icon_delegate.py  icon_model.py  table_chart_page.py  window_embedder_page.py
tests/: conftest.py
tests/_colors/: test_colors.py
tests/_internal/: test_decorators.py
tests/animation/: test_animation_funcs.py
tests/browser_embedder/: test_browser_embedder.py
tests/buttons/: test_buttons.py
tests/combo_box/: test_combo_box.py
tests/dialog_base/: test_dialog_base.py
tests/ela_button/: test_ela_button.py
tests/ela_chip/: test_ela_chip.py
tests/ela_confirm_dialog/: test_ela_confirm_dialog.py
tests/ela_dashboard_gauge/: test_ela_dashboard_gauge.py
tests/ela_divider/: test_ela_divider.py
tests/ela_dropdown_button/: test_ela_dropdown_button.py
tests/ela_figure_canvas/: test_ela_figure_canvas.py
tests/ela_group_box/: test_ela_group_box.py
tests/ela_info_badge/: test_ela_info_badge.py
tests/ela_markdown_viewer/: test_ela_markdown_viewer.py
tests/ela_pagination/: test_ela_pagination.py
tests/ela_password_edit/: test_ela_password_edit.py
tests/ela_pyqtgraph_canvas/: test_ela_pyqtgraph_canvas.py
tests/ela_rating_control/: test_ela_rating_control.py
tests/ela_side_drawer/: test_ela_side_drawer.py
tests/ela_split_button/: test_ela_split_button.py
tests/ela_spotlight/: test_ela_spotlight.py
tests/ela_steps/: test_ela_steps.py
tests/ela_tag_box/: test_ela_tag_box.py
tests/ela_timeline/: test_ela_timeline.py
(+122 files in other folders)
