[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyqt5-ela-pro"
version = "1.0.0"
description = "PyQt5 extension widgets based on PyQt5ElaWidgetTools"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    {name = "pyqt5-ela-pro contributors"}
]
keywords = ["pyqt5", "widgets", "gui", "extension"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",

    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: GUI Development",
]
dependencies = [
    "PyQt5>=5.15.0",
    "PyQt5-ElaWidgetTools>=0.8.0",
    "pypinyin>=0.50.0",
]

[project.optional-dependencies]
all = [
    "pywin32>=306",
    "comtypes>=1.4.0",
]
dev = [
    "pytest>=7.0.0",
]

[project.urls]
Homepage = "https://github.com/mengdeer589/pyqt5-ela-pro"
Documentation = "https://github.com/mengdeer589/pyqt5-ela-pro#readme"
Repository = "https://github.com/mengdeer589/pyqt5-ela-pro"
Issues = "https://github.com/mengdeer589/pyqt5-ela-pro/issues"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["ElaWidgetTools*", "PyQt*", "PyQt-Fluent*", "PyQt-SiliconUI*", "build*", "dist*", "*.egg-info"]
include = ["pyqt5_ela_pro*"]

[tool.setuptools.package-data]
pyqt5_ela_pro = ["icons/*.svg", "icons/*.png", "icons/*.ico", "icons/packages/*.icons"]

[tool.uv]
required-environments="sys_platform == 'win32' and platform_machine == 'AMD64'"

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-mock>=3.14.1",
]
